--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ footer {
 
 .container {
   width: 100%;
-  max-width: 1440px;
+  max-width: 1290px;
   padding: 0 15px;
   margin: 0 auto;
   height: auto;
@@ -142,42 +142,46 @@ img {
 
 .heading_h1 {
   font-weight: 700;
-  font-size: 74px;
-  line-height: 74px;
+  font-size: 68px;
+  line-height: 68px;
   text-transform: capitalize;
 }
 
 .heading_h2 {
   font-weight: 700;
-  font-size: 56px;
-  line-height: 68px;
+  font-size: 51px;
+  line-height: 62px;
   text-transform: capitalize;
 }
 
 .heading_h3 {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 40px;
+  font-size: 32px;
+  line-height: 36px;
+}
+
+.icon_bg_btn img {
+  max-width: 120px;
 }
 
 /* Default style */
 
 /* Announcement Bar */
 .top_bar {
-  padding-top: 30px;
+  padding-top: 20px;
 }
 
 .top_bar_cntnt_hldr ul {
   display: flex;
   align-items: center;
-  column-gap: 50px;
+  column-gap: 35px;
   justify-content: flex-end;
 }
 
 .top_bar_cntnt_hldr ul a {
   font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 18px;
+  line-height: 22px;
   color: #000000;
   transition: all 0.2s ease-in-out;
 }
@@ -195,8 +199,8 @@ img {
   grid-template-columns: 20% 1fr 20%;
   align-items: center;
   gap: 30px;
-  padding: 30px 0;
-  margin-bottom: 30px;
+  padding: 20px 0;
+  margin-bottom: 20px;
   border-bottom: 1px solid var(--theme-border-color);
 }
 
@@ -207,7 +211,7 @@ img {
 .head-logo img {
   width: 100%;
   display: block;
-  max-width: 260px;
+  max-width: 230px;
   object-fit: contain;
 }
 
@@ -225,7 +229,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 50px;
+  gap: 35px;
 }
 
 .head_nav_clmn > ul > li {
@@ -259,7 +263,8 @@ img {
   background-image: url(../images/chev-down.svg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;    filter: invert(1);
+  background-size: contain;
+  filter: invert(1);
 }
 
 .head_nav_clmn > ul > li:has(> ul) > ul {
@@ -323,14 +328,14 @@ img {
 
 .head-icons ul li a img {
   display: block;
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
   object-fit: contain;
 }
 .head-icons ul li a.head-cta-btn {
   background: var(--theme-primary-color-dark);
   border-radius: 50px;
-  padding: 8px 60px;
+  padding: 8px 45px;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
@@ -349,7 +354,7 @@ img {
   margin-bottom: 120px;
 }
 .bnr_min_height {
-  min-height: 800px;
+  min-height: 700px;
 }
 
 .home_bnr_sect .home_bnr_clmns_hldr {
@@ -360,7 +365,7 @@ img {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: stretch;
-  padding: 0 60px;
+  padding: 0 50px;
 }
 .bnr_cntnt_hldr {
   display: flex;
@@ -373,8 +378,8 @@ img {
   color: #fff;
 }
 .ban_img_hldr img {
-  max-width: 550px;
-  margin: 0 auto;
+  max-width: 480px;
+  margin: 0 0 0 auto;
 }
 
 .ban_img_hldr {
@@ -384,8 +389,8 @@ img {
 }
 .bnr_cntnt_hldr p {
   font-weight: 400;
-  font-size: 28px;
-  line-height: 34px;
+  font-size: 24px;
+  line-height: 30px;
   color: #fff;
 }
 
@@ -399,13 +404,13 @@ img {
   background: #96cd37;
   border-radius: 50px;
   padding: 5px 8px 5px 20px;
-  min-height: 51px;
-  max-height: 51px;
-  min-width: 205px;
+  min-height: 48px;
+  max-height: 48px;
+  min-width: 190px;
   color: #000000;
   font-weight: 500;
-  font-size: 18px;
-  line-height: 22px;
+  font-size: 16px;
+  line-height: 20px;
   display: flex;
   justify-content: space-between;
   transition: all 0.2s ease-in-out;
@@ -418,7 +423,7 @@ img {
 }
 
 .bnr_cntnt_hldr .hom_bnr_cta_row a img {
-  max-width: 40px;
+  max-width: 35px;
 }
 
 .bnr_cntnt_hldr .hom_bnr_cta_row a.bnr_to__go_cta img {
@@ -440,25 +445,30 @@ img {
   justify-content: center;
 }
 
+.bnr_icon_box img {
+  margin: 0;
+}
+
 .ai_icon_box.bnr_icon_box {
-  top: 100px;
-  width: 170px;
-  height: 170px;
+  top: 110px;
+  width: 150px;
+  height: 150px;
+  left: 50px;
 }
 
 .ai_icon_box.bnr_icon_box img {
-  max-width: 130px;
+  max-width: 115px;
 }
 
 .camera_icon_box.bnr_icon_box {
-  width: 200px;
-  height: 150px;
+  width: 180px;
+  height: 130px;
   bottom: 100px;
-  right: 0;
+  right: -25px;
 }
 
 .camera_icon_box.bnr_icon_box img {
-  max-width: 120px;
+  max-width: 105px;
 }
 /* Home Banner Section */
 
@@ -466,33 +476,39 @@ img {
 .cta_sect_main_hldr {
   border-radius: 20px;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: right -160px center;
   background-size: cover;
   background-color: var(--theme-primary-color-light);
-  padding: 0 50px;
+  padding: 0 50px 0 30px;
   display: grid;
   grid-template-columns: 1fr 50%;
   align-items: center;
 }
-
+.cta_sect_cntnt_hldr {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
 .cta_sect_img_hldr img {
-  max-width: 400px;
-  margin: -20px;
+  max-width: 350px;
+  margin: -20px auto;
+  transform: translateX(-50px);
 }
 
 .cta_sect_cntnt_hldr h2 {
   font-weight: 600;
-  font-size: 50px;
-  line-height: 60px;
+  font-size: 45px;
+  line-height: 55px;
   color: #000;
 }
 
 .cta_sect_cntnt_hldr span {
   font-weight: 700;
-  font-size: 110px;
-  line-height: 104px;
+  font-size: 95px;
+  line-height: 90px;
   text-transform: capitalize;
   color: #000;
+  padding-left: 30px;
 }
 .cta_sect.image_position_btm .cta_sect_img_hldr {
   order: 2;
@@ -503,29 +519,28 @@ img {
   order: 1;
 }
 .cta_sect.image_position_btm .cta_sect_img_hldr img {
-  margin: 0 auto;
+  margin: 0 0 0 auto;
+  transform: none;
 }
-
+.cta_sect.image_position_btm .cta_sect_main_hldr {
+  background-position: right -60px center;
+}
 .cta_sect.image_position_btm h2 {
   font-weight: 700;
-  font-size: 74px;
-  line-height: 84px;
+  font-size: 66px;
+  line-height: 72px;
   text-transform: capitalize;
 }
 /* CTA Section */
 
 /* Home Image Content Section */
 .img_cntnt_row {
-  padding: 120px 0;
+  padding: 100px 0;
   border-bottom: 1px solid #000;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
-  gap: 250px;
-}
-
-.img_cntnt_content a img {
-  max-width: 130px;
+  gap: 200px;
 }
 
 .img_cntnt_content a {
@@ -546,9 +561,9 @@ img {
 }
 
 .img_cntnt_content .heading_h1 {
-  margin: 30px 0 50px;
+  margin: 30px 0 40px;
   border-bottom: 1px solid #000;
-  padding-bottom: 100px;
+  padding-bottom: 60px;
 }
 .img_cntnt_row.image_position_right .img_cntnt_image {
   order: 2;
@@ -574,7 +589,6 @@ img {
 }
 
 .platform_content_hldr a img {
-  max-width: 130px;
   margin-left: auto;
 }
 
@@ -618,7 +632,7 @@ img {
   display: grid;
   grid-template-columns: calc(52% - 15px) calc(48% - 15px);
   align-items: stretch;
-  gap: 30px;
+  gap: 15px;
 }
 
 .serv_sldier_cntnt_btm {
@@ -629,6 +643,7 @@ img {
   padding: 20px 60px 20px 15px;
   max-width: 600px;
   position: relative;
+  gap: 10px;
 }
 .serv_sldier_cntnt_btm::before {
   content: "";
@@ -641,8 +656,8 @@ img {
 }
 .cntnt_btm_text p {
   font-weight: 500;
-  font-size: 28px;
-  line-height: 36px;
+  font-size: 24px;
+  line-height: 32px;
   text-transform: capitalize;
   color: #000000;
 }
@@ -658,7 +673,7 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding-right: 50px;
+  padding-right: 40px;
 }
 .serv_sldier_cntnt_top .heading_h3 {
   font-weight: 500;
@@ -720,11 +735,10 @@ img {
 
 .ib_title_heading .heading_h1 {
   max-width: 835px;
-  line-height: 95px;
+  line-height: 85px;
 }
 
 .ib_title_cta a img {
-  max-width: 130px;
   margin-left: auto;
 }
 
@@ -739,7 +753,7 @@ img {
 }
 
 .ib_title_cta {
-  max-width: 234px;
+  max-width: 194px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -770,16 +784,17 @@ img {
 
 .icon_box_content h3 {
   font-weight: 700;
-  font-size: 28px;
-  line-height: 34px;
+  font-size: 26px;
+  line-height: 32px;
   text-transform: capitalize;
   color: #000000;
+  text-wrap: balance;
 }
 
 .icon_box_content p {
   font-weight: 400;
-  font-size: 28px;
-  line-height: 34px;
+  font-size: 24px;
+  line-height: 30px;
   text-transform: capitalize;
   color: #000000;
   max-width: 90%;
@@ -809,7 +824,7 @@ img {
 .why_us_cntnt_hldr ul li img {
   max-width: 0px;
   position: absolute;
-  right: 100px;
+  right: 80px;
   opacity: 0;
   box-shadow: 0px 48px 70.1px -49px #8dc743b2;
   top: 50%;
@@ -819,7 +834,7 @@ img {
 .why_us_cntnt_hldr ul li:hover img {
   opacity: 1;
   transition: all 0.2s ease-in-out;
-  max-width: 400px;
+  max-width: 370px;
 }
 
 .why_us_title_row .heading_h1 {
@@ -828,8 +843,8 @@ img {
 
 .why_us_cntnt_hldr ul li p {
   font-weight: 400;
-  font-size: 28px;
-  line-height: 34px;
+  font-size: 26px;
+  line-height: 30px;
   text-transform: capitalize;
   color: #000000;
 }
@@ -875,16 +890,15 @@ img {
 
 .test_box_cntnt h3 {
   font-weight: 700;
-  font-size: 28px;
-  line-height: 34px;
+  font-size: 24px;
+  line-height: 30px;
   color: #000000;
 }
 
 .test_box_cntnt p {
-  font-family: Poppins;
   font-weight: 400;
-  font-size: 20px;
-  line-height: 28px;
+  font-size: 19px;
+  line-height: 26px;
   color: #000;
 }
 
@@ -893,7 +907,8 @@ img {
 }
 
 .test_auth_img img {
-  max-width: 92px;border-radius: 50%;
+  max-width: 80px;
+  border-radius: 50%;
 }
 
 .test_box_author {
@@ -923,10 +938,10 @@ img {
 }
 .test_slide_nav {
   position: relative;
-  width: 65px;
+  width: 60px;
   top: 0;
   transform: none;
-  height: 65px;
+  height: 60px;
 }
 
 .test_nav {
@@ -935,8 +950,8 @@ img {
 }
 
 .test_slide_nav svg {
-  width: 35px;
-  height: 35px;
+  width: 30px;
+  height: 30px;
 }
 
 .test_slide_nav svg * {
@@ -960,17 +975,17 @@ img {
   border-radius: 50px;
   display: flex;
   align-items: center;
-  padding: 8px 8px 8px 50px;
-  column-gap: 40px;
+  padding: 8px 8px 8px 40px;
+  column-gap: 30px;
   flex-wrap: nowrap;
   font-weight: 700;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 18px;
+  line-height: 22px;
   color: #000914;
 }
 
 .posts_title_row a img {
-  max-width: 60px;
+  max-width: 50px;
   transition: all 0.2s ease-in-out;
 }
 .posts_title_row a:hover img {
@@ -1027,11 +1042,11 @@ img {
 
 .post_box_btn a {
   background: #8dc743;
-  width: 70px;
+  width: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 70px;
+  height: 60px;
   border-radius: 50%;
   margin-left: auto;
 }
@@ -1044,8 +1059,8 @@ img {
   top: 0;
 }
 .post_box_btn a svg {
-  width: 35px;
-  height: 35px;
+  width: 28px;
+  height: 28px;
   transform: rotate(135deg);
   transition: all 0.2s ease-in-out;
 }
@@ -1057,8 +1072,8 @@ img {
 
 .post_box_title h3 {
   font-weight: 700;
-  font-size: 34px;
-  line-height: 38px;
+  font-size: 30px;
+  line-height: 34px;
   color: #ffffff;
   border-left: 5px solid #8dc743;
   padding-left: 14px;
@@ -1069,7 +1084,7 @@ img {
 /* Footer Styling */
 
 .ft_logo :is(img, a) {
-  max-width: 260px;
+  max-width: 220px;
   display: block;
 }
 .site-footer {
@@ -1078,8 +1093,8 @@ img {
 
 .ft_menu_hldr ul li a {
   font-weight: 400;
-  font-size: 17px;
-  line-height: 24px;
+  font-size: 16px;
+  line-height: 22px;
   color: #000;
   transition: all 0.2s ease-in-out;
 }
@@ -1141,8 +1156,8 @@ img {
 
 .ft_copy_text p {
   font-weight: 400;
-  font-size: 18px;
-  line-height: 25px;
+  font-size: 17px;
+  line-height: 24px;
   color: #000000;
 }
 
@@ -1154,8 +1169,8 @@ img {
 
 .ft_btm_policy ul a {
   font-weight: 400;
-  font-size: 18px;
-  line-height: 25px;
+  font-size: 17px;
+  line-height: 24px;
   color: #000000;
 }
 .ft_btm_policy ul a:hover {
